--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
                 </div>
                 <!-- logo image -->
                 <div class="site-logo">
-                    <a href="index.html">
-                        <img src="images\logo.svg" alt="Bolby" />
+                    <a
+                        href="index.html"
+                        style="color: #fff; font-weight: 700; font-size: 30px"
+                    >
+                        ThuHa
                     </a>
                 </div>
             </div>
@@ -137,8 +140,11 @@
         <header class="desktop-header-1 d-flex align-items-start flex-column">
             <!-- logo image -->
             <div class="site-logo">
-                <a href="index.html">
-                    <img src="images\logo.svg" alt="Bolby" />
+                <a
+                    href="index.html"
+                    style="color: #fff; font-weight: 700; font-size: 30px"
+                >
+                    ThuHa
                 </a>
             </div>
 
