--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
                             ><i class="icon-user-following"></i>Thông tin</a
                         >
                     </li>
-                    <li>
+                    <li id="submenu-uniix">
                         <a href="#services"
                             ><i class="icon-briefcase"></i>Dịch vụ</a
                         >
+                        <div class="submenu-side"></div>
                     </li>
                     <li>
                         <a href="#experience"
@@ -660,148 +661,67 @@
 
                     <div class="spacer" data-height="60"></div>
 
-                    <div class ="row" id="sanpham">
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
-                                data-color="#6C6CE5"
-                            >
-                                <img
-                                    src="images\service-1.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Kiểm thử thủ công</h3>
-                                <p class="mb-0">
-                                    Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
-                                </p>
-                            </div>
-                            <div
-                                class="spacer d-md-none d-lg-none"
-                                data-height="30"
-                            ></div>
+                    <div class ="row" id="sanpham"> 
+                        <div class="col-md-4 mb-3">
+                        <!-- service box -->
+                        <div
+                            class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
+                            data-color="#6C6CE5"
+                        >
+                            <img
+                                src="images\service-1.svg"
+                                alt="UI/UX design"
+                            />
+                            <h3 class="mb-3 mt-0">Kiểm thử thủ công</h3>
+                            <p class="mb-0">
+                                Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
+                            </p>
                         </div>
-
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center shadow-yellow"
-                                data-color="#F9D74C"
-                            >
-                                <img
-                                    src="images\service-2.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Kiểm thử tự động</h3>
-                                <p class="mb-0">
-                                    Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
-                                </p>
-                            </div>
-                            <div
-                                class="spacer d-md-none d-lg-none"
-                                data-height="30"
-                            ></div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
-                                data-color="#F97B8B"
-                            >
-                                <img
-                                    src="images\service-3.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Nhiếp ảnh</h3>
-                                <p class="mb-0">
-                                    Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
-                                data-color="#F97B8B"
-                            >
-                                <img
-                                    src="images\service-3.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Cà phê trung nguyên</h3>
-                                <p class="mb-0">
-                                    Cà phê ngon nhất Việt Nam.
-                                    Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
-                                data-color="#6C6CE5"
-                            >
-                                <img
-                                    src="images\service-1.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Cafe nestee</h3>
-                                <p class="mb-0">
-                                    Cà phê ngon nhì Việt Nam.
-                                     </p>
-                            </div>
-                            <div
-                                class="spacer d-md-none d-lg-none"
-                                data-height="30"
-                            ></div>
-                        </div>
-                    
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
-                                data-color="#6C6CE5"
-                            >
-                                <img
-                                    src="images\service-1.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Cafe Sơn la</h3>
-                                <p class="mb-0">
-                                    Cà phê Sơn La.
-                                      </p>
-                            </div>
-                            <div
-                                class="spacer d-md-none d-lg-none"
-                                data-height="30"
-                            ></div>
-                        </div>
-                        <div class="col-md-4">
-                            <!-- service box -->
-                            <div
-                                class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
-                                data-color="#6C6CE5"
-                            >
-                                <img
-                                    src="images\service-1.svg"
-                                    alt="UI/UX design"
-                                />
-                                <h3 class="mb-3 mt-0">Cafe chồn</h3>
-                                <p class="mb-0">
-                                    Cà phê chồn ngon nhất thế giới. 
-                                   
-                                </p>
-                            </div>
-                            <div
-                                class="spacer d-md-none d-lg-none"
-                                data-height="30"
-                            ></div>
-                        </div>
-
+                        <div
+                            class="spacer d-md-none d-lg-none"
+                            data-height="30"
+                        ></div>
                     </div>
+
+                    <div class="col-md-4 mb-3">
+                        <!-- service box -->
+                        <div
+                            class="service-box rounded data-background padding-30 text-center shadow-yellow"
+                            data-color="#F9D74C"
+                        >
+                            <img
+                                src="images\service-2.svg"
+                                alt="UI/UX design"
+                            />
+                            <h3 class="mb-3 mt-0">Kiểm thử tự động</h3>
+                            <p class="mb-0">
+                                Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
+                            </p>
+                        </div>
+                        <div
+                            class="spacer d-md-none d-lg-none"
+                            data-height="30"
+                        ></div>
+                    </div>
+
+                    <div class="col-md-4 mb-3">
+                        <!-- service box -->
+                        <div
+                            class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
+                            data-color="#F97B8B"
+                        >
+                            <img
+                                src="images\service-3.svg"
+                                alt="UI/UX design"
+                            />
+                            <h3 class="mb-3 mt-0">Nhiếp ảnh</h3>
+                            <p class="mb-0">
+                                Chúng tôi cam kết đem lại sự hài lòng cho quý khách hàng.
+                            </p>
+                        </div>
+                    </div>
+
+                   </div>
 
                     <div class="mt-5 text-center">
                         <p class="mb-0">
@@ -1668,26 +1588,52 @@
         <script>
             $(document).ready(function(){
                 $.get('/sanpham.json',function(res){
-                    console.log(res.sanphams);
                     for(i=0;i<(res.sanphams.length);i++){
-                        $("#mnlist").append('<li class="active">'+
-                        '<a href="#home"><i class="icon-home"></i>'+res.sanphams[i].name+'</a>'+
-                    '</li>');
-                       // document.write(res.sanphams[i].name+"<br>");
+                        $(".submenu-side").append(`<li class="active">
+                            <a href="#services" data-index="${i}">${res.sanphams[i].name}</a></li>`);
                     }
                     $.each(res.sanphams,function(i,v){
-                        $('#sanpham').append('<div class="col-md-4">'+
-                            '<div'+
-                                ' class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">'+
-                                ' <img src="/images/service-1.svg" alt="UI/UX design"/>'+
-                                ' <h3 class="mb-3 mt-0">UI/UX design</h3>'+
-                                ' <p class="mb-0">'+v.name+'</p>'+
-                            '</div>'+
-                            '<div class="spacer d-md-none d-lg-none" data-height="30" ></div></div>');
+                        $('#sanpham').append(`
+                        <div class="col-md-4 mb-3">
+                            <!-- service box -->
+                            <div
+                                data-index="${i}"
+                                class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
+                                style="background-color: ${v.data_color}"
+                            >
+                                <img
+                                    src="images\\${v.img}"
+                                    alt="UI/UX design"
+                                />
+                                <h3 class="mb-3 mt-0">${v.name}</h3>
+                                <p class="mb-0">
+                                   ${v.body}
+                                </p>
+                            </div>
+                        </div>
+                        `);
                     });
                 });
             });
 
+            $(".submenu-side").click((e) => {
+                e.stopImmediatePropagation()
+                if(e.target.closest('a')) {
+                    const index = e?.target?.closest('a')?.dataset?.index;
+                    if(index) {
+                        $('#sanpham').find('div[data-index]').each((i, item) => {
+                            item.classList.remove("slected")
+                            if(Number(index) === Number(item.dataset?.index)){
+                                item.classList.add("slected")
+                            }
+                        })
+                    }
+                }
+            })
+
+            $("#submenu-uniix").click(() => {
+                $(".submenu-side").toggleClass("active-submenu")
+            })
         </script>
     </body>
 </html>
