--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,8 @@
                                 style="background-color: ${v.data_color}"
                             >
                                 <img
-                                    src="images\\${v.img}"
+                                    style="max-height: 150px;object-fit: cover; width: 100%;border-radius: 4px;"
+                                    src="${v.img}"
                                     alt="UI/UX design"
                                 />
                                 <h3 class="mb-3 mt-0">${v.name}</h3>
